Version 1.1:
-Added mult-touch support.