@@ -1,2 +1,3 @@
 Version 1.1:
--Added mult-touch support.
+-Added multi-touch support.
+-fixed race condition in the fps and ray counter.
